# asterisk

./: .env.sample  .gitignore  .pre-commit-config.yaml  .todo.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml
.github/workflows/: audit.yml  coverage.yml  tests_and_checks.yml
asterisk/: Cargo.toml  tauri.conf.json
asterisk-app/: Cargo.toml  schema.json  tauri.conf.json
asterisk-app/client/: eslint.config.mjs  index.html  package.json  pnpm-lock.yaml
asterisk-app/client/src/: App.module.css  index.css  index.tsx
asterisk-app/lib/: cmd.rs  window.rs
asterisk-cli/: Cargo.toml
asterisk-cli/lib/: args.rs  error.rs  lib.rs  shell.rs  styles.rs
asterisk-client/: eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
asterisk-client/src/: App.tsx  index.css  index.tsx
asterisk-client/src/AgentDesigner/: AgentDesigner.tsx  Canvas.tsx
asterisk-client/src/SidePanel/: Header.tsx  HoverZone.tsx  Main.tsx  Project.tsx  ProjectGroup.tsx  ProjectGroupDivider.tsx  SidePanel.tsx  WorkspaceSelect.tsx
asterisk-client/src/app/: globals.css  page.tsx
asterisk-client/src/app/components/AgentDesigner/:  AgentDesigner.tsx  AgentDesigner.tsx  BackgroundContextMenu.tsx  Canvas.tsx  CanvasContextProvider.tsx  ConnectionLine.tsx  ContextMenu.tsx  Controls.tsx  Edge.tsx  Node.tsx  NodeContextMenu.tsx  NodeHandle.tsx
asterisk-client/src/app/components/AgentDesigner/NodeResizer/: Handle.tsx  Line.tsx  index.tsx
asterisk-client/src/app/components/AgentDesigner/state/: edges.ts  nodes.ts
asterisk-client/src/app/components/AgentDesigner/types/: edge.ts  node.ts
asterisk-client/src/app/components/SidePanel/: Header.tsx  HoverZone.tsx  IconTray.tsx  Main.tsx  Project.tsx  ProjectGroup.tsx  SidePanel.tsx  WorkspaceSelect.tsx
asterisk-core/: Cargo.toml
asterisk-core/examples/: cli.rs  model.rs  model_stream.rs  playground.rs  prompts.rs
asterisk-core/lib/: lib.rs
asterisk-core/lib/agents/: error.rs  mod.rs
asterisk-core/lib/agents/dreamer/: agent.rs  builder.rs  channels.rs  context.rs  error.rs  instruction.txt  memories.rs  metrics.rs  mod.rs  thread.rs
asterisk-core/lib/agents/dreamer/instructions/: dreamer-0.1.0.md  dreamer-0.1.1.md
asterisk-core/lib/agents/dreamer/tools/: knowledge_base.rs  message_box.rs  mod.rs  traits.rs
asterisk-core/lib/agents/reasoner/: agent.rs  mod.rs
asterisk-core/lib/flow/: edge.rs  mod.rs  node.rs  project.rs  trigger.rs
asterisk-core/lib/memories/: mod.rs
asterisk-core/lib/models/: error.rs  mod.rs  prompt.rs  traits.rs
asterisk-core/lib/models/ollama/: builder.rs  config.rs  message.rs  mod.rs  model.rs  stream.rs
asterisk-core/lib/models/openai/: builder.rs  config.rs  message.rs  model.rs  stream.rs
asterisk-core/lib/tools/: error.rs  helper.rs  inbox.rs  memories.rs  message_box.rs  mod.rs  traits.rs
asterisk-core/lib/tools/vms/: mod.rs
asterisk-core/lib/utils/: env.rs  mod.rs
asterisk-server/: Cargo.toml
asterisk-swarm/: Cargo.toml
asterisk-swarm/lib/: lib.rs
asterisk/capabilities/: default.json
asterisk/client/: package.json  vite.config.ts
asterisk/client/src/: App.tsx  index.css
asterisk/lib/: app.rs  error.rs  lib.rs  plugins.rs  window.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
