[workspace]
members = ["asterisk-app", "asterisk-cli", "asterisk-core"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", default-features = false }
tauri-build = { version = "2.0.0-rc", features = [] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.34", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
env_logger = "0.11"
pin-project = "1.1"
