[workspace]
members = ["asterisk-app", "asterisk-cli", "asterisk-core", "asterisk-server"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", default-features = false }
tauri-build = { version = "2.0.0-rc", features = [] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.34", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
pin-project = "1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3"
lazy_static = "1.5"
asterisk-core = { path = "asterisk-core" }
asterisk-cli = { path = "asterisk-cli" }
asterisk-server = { path = "asterisk-server" }
asterisk-app = { path = "asterisk-app" }
colored = "2.1.0"
clap = { version = "4.5.16", features = ["color", "derive"] }
futures-util = "0.3.30"
