[package]
name = "asterisk-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "asterisk_core"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
futures.workspace = true
pin-project.workspace = true
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
