[package]
name = "asterisk-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "asterisk_core"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
futures.workspace = true
lazy_static.workspace = true
pin-project.workspace = true
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sqlite-vec = "0.1.1"
strum_macros = "0.26.4"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
colored.workspace = true
regex = "1.11.1"
